# iracing-overlay

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp  overlay_base.cpp  overlay_base.h  pedals_chart.cpp  pedals_chart.h  pedals_overlay.cpp  pedals_overlay.h  util.h
ui/: pedals.qml
